--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,24 +10,30 @@ on: [push, pull_request]
 
 jobs:
     build:
-        # Only run on PRs if the source branch is on someone else's repo
-        if: ${{ github.event_name != 'pull_request' || github.repository != github.event.pull_request.head.repo.full_name }}
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                java: [17]
+                java: [16, 8]
             fail-fast: true
         steps:
-            - uses: actions/checkout@v2.4.0
+            - uses: actions/checkout@v2
             - name: JDK ${{ matrix.java }}
-              uses: actions/setup-java@v3.1.0
+              uses: actions/setup-java@v2
               with:
                   java-version: ${{ matrix.java }}
-                  cache: 'gradle'
-                  distribution: 'temurin'
+                  distribution: 'adopt'
+            - name: Cache maven
+              uses: actions/cache@v2
+              with:
+                  path: |
+                      ~/.m2/repository/
+                      work/Minecraft
+                  key: ${{ runner.os }}-paper-2-${{ hashFiles('**/pom.xml') }}
+                  restore-keys: ${{ runner.os }}-paper-2
             - name: Patch and build
               run: |
                   git config --global user.email "no-reply@github.com"
                   git config --global user.name "Github Actions"
-                  ./gradlew applyPatches --stacktrace
-                  ./gradlew build --stacktrace
+                  ./paper build
+            - name: Build javadocs
+              run: mvn -pl Paper-API,Paper-MojangAPI -am javadoc:javadoc
