--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
                   key: ${{ runner.os }}-paper-2-${{ hashFiles('**/pom.xml') }}
                   restore-keys: ${{ runner.os }}-paper-2
             - name: Patch and build
-            - run: |
+              run: |
                   chmod +x ./paper
                   git config --global user.email "no-reply@github.com"
                   git config --global user.name "Github Actions"
